Clean up Quarkus test configuration