@@ -120,11 +120,6 @@
 			<artifactId>quarkus-junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>testcontainers</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 	
 	<build>
@@ -144,7 +139,10 @@
                 <version>${surefire-plugin.version}</version>
                 <configuration>
                     <argLine>
+                        -Djava.util.logging.manager=org.jboss.logmanager.LogManager
                         --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                        -XX:+EnableDynamicAgentLoading
                     </argLine>
                 </configuration>
             </plugin>
